# sims4-dll

./: CMakeLists.txt  build_workflow.yml  git.sh  version.cpp  version.def
.github/workflows/: build.yml  c-cpp.yml
